
- ``with`` and ``as`` are now keywords.

- Bug #1664966: Fix crash in exec if Unicode filename can't be decoded.

- Issue #1537: Changed GeneratorExit's base class from Exception to
  BaseException.

- Fix Issue #1703448: A joined thread could show up in the
  threading.enumerate() list after the join() for a brief period until
  it actually exited.


Library
-------

- #1627: httplib now ignores negative Content-Length headers.

- #900744: If an invalid chunked-encoding header is sent by a server,
  httplib will now raise IncompleteRead and close the connection instead
  of raising ValueError.

- #1492: The content type of BaseHTTPServer error messages can now be
  overridden.

- Issue 1781: ConfigParser now does not let you add the "default" section
  (ignore-case)

- Removed uses of dict.has_key() from distutils, and uses of
  callable() from copy_reg.py, so the interpreter now starts up
  without warnings when '-3' is given.  More work like this needs to
  be done in the rest of the stdlib.

- Issue #1916. Added isgenerator() and isgeneratorfunction() to inspect.py.

- #1224: Fixed bad url parsing when path begins with double slash.

- ctypes instances that are not or do not contain pointers can now be
  pickled.

- Patch #1966: Break infinite loop in httplib when the servers
  implements the chunked encoding incorrectly.

- Rename rational.py to fractions.py and the rational.Rational class
  to fractions.Fraction, to avoid the name clash with the abstract
  base class numbers.Rational.  See discussion in issue #1682.

- The pickletools module now provides an optimize() function
  that eliminates unused PUT opcodes from a pickle string.

- #2021: Allow tempfile.NamedTemporaryFile and SpooledTemporaryFile
  to be used in with statements by correctly supporting the context
  management protocol.

- #1979: Add rich comparisons to Decimal, and make Decimal comparisons
  involving a NaN follow the IEEE 754 standard.
